--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
 </head>
 <body>
 <div id= "canvas1HTML"></div>
+<div class="section-leadin">
+    <p class="leadin-title">our perception of time</p>
+</div>
+
 <br>
 <div class="scroll-outer">
 <div class = "notcanvas y mandatory-scroll-snapping">
     <!--The Questionnaire Section-->
     <div class="section" id="questionnaire-intro">
         <div class="quote">
-            <h1>TIME TRAVELERS:</h1>
-            <h1>a cliche term in popular culture which we appropriated to mean people literally
-                travelling in different speeds and points in time.</h1>
+            <div class="rolling-text">
+                <p class="curved">TIME TRAVELERS: a cliche term in popular culture whi</p>
+                <p class="curved" id="rolling1">ch we appropria</p>
+                <p class="curved" id="rolling2">ted to mean people lite</p>
+                <p class="curved" id="rolling3">rally travelling in diff</p>
+                <p class="curved" id="rolling4">erent speeds and poi</p>
+                <p class="curved" id="rolling5">nts in time.</p>
+                <div class="f"></div>
+            </div>
             <br>
-            <h1>Taeyoon Choi</h1>
-            <p>School of Poetic Computation</p>
+            <div class="quote__right">
+                <p>Taeyoon Choi, School of Poetic Computation</p>
+                <a id="start" href="#start">begin</a>
+            </div>
         </div>
 
-<!--        <div>-->
-<!--&lt;!&ndash;            <h3 class ="cursive"> our perception of time</h3>&ndash;&gt;-->
-<!--            <div>-->
-<!--                <p> "Time travelers: a cliche term in popular culture which we appropriated to mean people literally-->
-<!--                    travelling in different speeds and points in time."-->
-<!--                <p class = "cursive" id= "quote">- Taeyoon Choi, School of Poetic Computation.</p>-->
-<!--            </div>-->
-<!--        </div>-->
-        <div class="top">
-            <p class="book">Your Understanding of Time:</p>
-            <a id="start" href="#questionnaire-section">begin</a>
-        </div>
-        <p class="leadin book"> How much do you agree with the following statements:</p>
+<!--        <p class="leadin book"> How much do you agree with the following statements:</p>-->
     </div>
     <div class="section" id="questionnaire-section">
 
@@ -46,15 +46,18 @@
                     <p class="statement">time is money</p>
                     <p class="answer"></p>
                     <div class="choices">
-                        <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="0">
-                            <label for="strongly">Strongly Agree</label>
-                            <input type="radio" name="agreement" id="neutral" value="2">
-                            <label for="neutral">Neutral</label>
-                        </div>
-                        <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="1">
-                            <label for="slightly">Slightly Agree</label>
-                            <input type="radio" name="agreement" id="disagree" value="3">
-                            <label for="disagree">Disagree</label>
+                            <div>
+                                <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="0">
+                                <label for="strongly">Agree</label>
+                            </div>
+                            <div>
+                                <input type="radio" name="agreement" id="neutral" value="2">
+                                <label for="neutral">Neutral</label>
+                            </div>
+                            <div>
+                                <input type="radio" name="agreement" id="disagree" value="3">
+                                <label for="disagree">Disagree</label>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -62,15 +65,19 @@
                     <p class="statement">silence is uncomfortable</p>
                     <p class="answer"></p>
                     <div class="choices">
-                        <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="0">
-                            <label for="strongly">Strongly Agree</label>
-                            <input type="radio" name="agreement" id="neutral" value="2">
-                            <label for="neutral">Neutral</label>
-                        </div>
-                        <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="1">
-                            <label for="slightly">Slightly Agree</label>
-                            <input type="radio" name="agreement" id="disagree" value="3">
-                            <label for="disagree">Disagree</label>
+                        <div class="choice-group">
+                            <div>
+                                <input type="radio" name="agreement" id="strongly" value="0">
+                                <label for="strongly">Agree</label>
+                            </div>
+                            <div>
+                                <input type="radio" name="agreement" id="neutral" value="2">
+                                <label for="neutral">Neutral</label>
+                            </div>
+                            <div>
+                                <input type="radio" name="agreement" id="disagree" value="3">
+                                <label for="disagree">Disagree</label>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -93,15 +100,19 @@
                     <p class="statement">you would rather be late for your next meeting than cut the flow of your current discussion</p>
                     <p class="answer"></p>
                     <div class="choices">
-                        <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="0">
-                            <label for="strongly">Strongly Agree</label>
-                            <input type="radio" name="agreement" id="neutral" value="2">
-                            <label for="neutral">Neutral</label>
-                        </div>
-                        <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="1">
-                            <label for="slightly">Slightly Agree</label>
-                            <input type="radio" name="agreement" id="disagree" value="3">
-                            <label for="disagree">Disagree</label>
+                        <div class="choice-group">
+                            <div>
+                                <input type="radio" name="agreement" id="strongly" value="0">
+                                <label for="strongly">Agree</label>
+                            </div>
+                            <div>
+                                <input type="radio" name="agreement" id="neutral" value="2">
+                                <label for="neutral">Neutral</label>
+                            </div>
+                            <div>
+                                <input type="radio" name="agreement" id="disagree" value="3">
+                                <label for="disagree">Disagree</label>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -109,15 +120,19 @@
                     <p class="statement">time is measured by the clock</p>
                     <p class="answer"></p>
                     <div class="choices">
-                        <div class="choice-group"><input type="radio" name="agreement" id="strongly" value="0">
-                            <label for="strongly">Strongly Agree</label>
-                            <input type="radio" name="agreement" id="neutral" value="2">
-                            <label for="neutral">Neutral</label>
-                        </div>
-                        <div class="choice-group"><input type="radio" name="agreement" id="slightly" value="1">
-                            <label for="slightly">Slightly Agree</label>
-                            <input type="radio" name="agreement" id="disagree" value="3">
-                            <label for="disagree">Disagree</label>
+                        <div class="choice-group">
+                            <div>
+                                <input type="radio" name="agreement" id="strongly" value="0">
+                                <label for="strongly">Agree</label>
+                            </div>
+                            <div>
+                                <input type="radio" name="agreement" id="neutral" value="2">
+                                <label for="neutral">Neutral</label>
+                            </div>
+                            <div>
+                                <input type="radio" name="agreement" id="disagree" value="3">
+                                <label for="disagree">Disagree</label>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -131,6 +146,9 @@
                 <p class="glitch bold" data-text="Time."> Time.</p>
             </div>
         </div>
+        <div class="notes-outside">
+
+
         <div class="notes-text">
 <!--            <img style="height: 500px; width:200px;" src="img/notes-background.png">-->
             <div class="text">
@@ -143,19 +161,24 @@
                 Sprint". Classes, jobs, even recreation may be calculated down to a precise minute or even second.
                 Unfailingly, we base our entire day around time, secure in the knowledge that as everything else ebbs and
                 flows around us, time will remain constant, ticking an inexorable march forward.</p>
-                <p>However, looking into anywhere but the present, we would come to the realization that time, at least as
-                we know it, was (and presumably still is) anything but a neutral construct. We may live by time, depend on
-                it, and even come to be enslaved by it, but the reassurance of its constancy rests upon ephemeral foundations.
-                If anything else, the constancy and precision of time as we know it (insofar as it is possible to "know"
-                time) is a recent construction.</p>
-                <p>This does not bear on the linear progression of time or time as an aggregated concept. Rather, time as
-                we've seen it, the 12st, the 5s, the 60s swirling abut us in a constant, and yet maddeningly arbitrary swirl
-                of progress, is a fabrication, much like baloney, pedigree dog breeds, and fashion items. To wit, the ability
-                to calculate and appraise time down to its very second, is a product of modernity, for good or for worse.</p>
-                <p>Then if time is not the precise ticking of seconds to minutes, minutes to hours, and hours to day, then
-                what is time? Is it an abstract toy of science? A gold inlaid toy of dilettants manufactured by the swiss,
-                or something else altogether?</p>
             </div>
+        </div>
+        <div class="notes-text">
+            <div class="text">
+                <p>However, looking into anywhere but the present, we would come to the realization that time, at least as
+                    we know it, was (and presumably still is) anything but a neutral construct. We may live by time, depend on
+                    it, and even come to be enslaved by it, but the reassurance of its constancy rests upon ephemeral foundations.
+                    If anything else, the constancy and precision of time as we know it (insofar as it is possible to "know"
+                    time) is a recent construction.</p>
+                <p>This does not bear on the linear progression of time or time as an aggregated concept. Rather, time as
+                    we've seen it, the 12st, the 5s, the 60s swirling abut us in a constant, and yet maddeningly arbitrary swirl
+                    of progress, is a fabrication, much like baloney, pedigree dog breeds, and fashion items. To wit, the ability
+                    to calculate and appraise time down to its very second, is a product of modernity, for good or for worse.</p>
+                <p>Then if time is not the precise ticking of seconds to minutes, minutes to hours, and hours to day, then
+                    what is time? Is it an abstract toy of science? A gold inlaid toy of dilettants manufactured by the swiss,
+                    or something else altogether?</p>
+            </div>
+        </div>
         </div>
     </div>
     <div class="section" id="placeholder-next-section" style="border: 1px solid turquoise">
@@ -166,8 +189,11 @@
     </div>
 </div>
 </div>
+
 <div  id= "canvas2HTML"></div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/circletype@2.3.0/dist/circletype.min.js" integrity="sha256-OF8sWQd2+KBhmHPCT4frE/uf/WFB4Cp8kVF/gefmeh4=" crossorigin="anonymous"></script>
+<script src="js/rolling.js"></script>
 <script src="js/questionnaire.js"></script>
 </body>
 </html>
