--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js" type="text/javascript"></script>
     <script src="js/mySketch.js" type="text/javascript"></script>
+    <script src="js/particle.js" type="text/javascript"></script>
     <script src="js/frag_functions_default.js" type="text/javascript"></script>
     <script src="js/frag.js" type="text/javascript"></script>
     <script src="js/vert.js" type="text/javascript"></script>
@@ -183,14 +184,18 @@
     </div>
     <div class="section" id="placeholder-next-section" style="border: 1px solid turquoise">
         <p>placeholder text</p>
+        
     </div>
     <div class="section" id="placeholder-next-next-section" style="border:1px solid whitesmoke">
         <p>placeholder text</p>
+
+        <div id="line-holder">  
+        </div>
     </div>
 </div>
 </div>
 
-<div  id= "canvas2HTML"></div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/circletype@2.3.0/dist/circletype.min.js" integrity="sha256-OF8sWQd2+KBhmHPCT4frE/uf/WFB4Cp8kVF/gefmeh4=" crossorigin="anonymous"></script>
 <script src="js/rolling.js"></script>
