--- a/index.html
+++ b/index.html
@@ -141,12 +141,15 @@
         </div>
     </div>
     <div class="section" id="notes-section">
-        <div class="top">
-            <img id ="concept" src="img/concept.png">
-            <div class="glitch-container">
-                <p class="glitch bold" data-text="Time."> Time.</p>
+        <div class="notes-spacer">
+            <div class="top">
+                <img id ="concept" src="img/concept.png">
+                <div class="glitch-container">
+                    <p class="glitch bold" data-text="Time."> Time.</p>
+                </div>
             </div>
         </div>
+
         <div class="notes-outside">
 
 
