--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" type="text/css" href="styles/css/glitch.css">
 </head>
 <body>
-<div id= "canvas1HTML"></div>
+    <div class ="top">
+        <div id= "canvas1HTML"></div>
+    </div>
+
 <div class="section-leadin">
     <p class="leadin-title">our perception of time</p>
 </div>
