--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
     </div>
 
 <div class="section-leadin">
-    <p class="leadin-title">our perception of time</p>
+    <p style="margin-top: 50px" class="leadin-title">our perception of time</p>
 </div>
 
 <br>
 <div class="scroll-outer">
 <div class = "notcanvas y mandatory-scroll-snapping">
-    <!--The Questionnaire Section-->
+    <img style= "max-width: 1200px" src = "img/introquote.png">
+    <!--The Questionnaire Section  -->
     <div class="section" id="questionnaire-intro">
         <div class="quote">
+            <!--- 
             <div class="rolling-text">
                 <p class="curved">TIME TRAVELERS: a cliche term in popular culture whi</p>
                 <p class="curved" id="rolling1">ch we appropria</p>
@@ -33,12 +35,15 @@
                 <p class="curved" id="rolling5">nts in time.</p>
                 <div class="f"></div>
             </div>
-            <br>
-            <div class="quote__right">
+                  <br>
+            -->
+             
+            <div style="margin-top: -250px" class="quote__right">
                 <p>Taeyoon Choi, School of Poetic Computation</p>
                 <a id="start" href="#start">begin</a>
             </div>
         </div>
+   
 
 <!--        <p class="leadin book"> How much do you agree with the following statements:</p>-->
     </div>
