--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js" type="text/javascript"></script>
     <script src="js/mySketch.js" type="text/javascript"></script>
     <script src="js/particle.js" type="text/javascript"></script>
+    <script src="js/bubbles.js" type="text/javascript"></script>
     <script src="js/frag_functions_default.js" type="text/javascript"></script>
     <script src="js/frag.js" type="text/javascript"></script>
     <script src="js/vert.js" type="text/javascript"></script>
@@ -194,14 +195,11 @@
         </div>
     </div>
     <div class="section" id="placeholder-next-section" style="border: 1px solid turquoise">
-        <p>placeholder text</p>
         
+        <div id="line-holder"></div> <br>
     </div>
     <div class="section" id="placeholder-next-next-section" style="border:1px solid whitesmoke">
-        <p>placeholder text</p>
-
-        <div id="line-holder">  
-        </div>
+        <div id= "canvas2HTML"></div>
     </div>
 </div>
 </div>
@@ -209,7 +207,6 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/circletype@2.3.0/dist/circletype.min.js" integrity="sha256-OF8sWQd2+KBhmHPCT4frE/uf/WFB4Cp8kVF/gefmeh4=" crossorigin="anonymous"></script>
-<script src="js/rolling.js"></script>
 <script src="js/questionnaire.js"></script>
 </body>
 </html>
