--- a/index.html
+++ b/index.html
@@ -188,14 +188,36 @@
         </div>
         </div>
     </div>
-    <div class="section" id="placeholder-next-section" style="border: 1px solid turquoise">
-        <p>placeholder text</p>
-        
+    <div class="section" id="industrialization-section">
+        <div id="gears-area">
+            <div id="gears__clock">
+                <img id="gears__bg" src="img/indust-clock-background.png">
+                <div id="gears__individual">
+                    <div class="gears___relative">
+                        <div class="gears__rot1">
+                            <img src="img/indust-clock-rotating1.png">
+                        </div>
+                        <div class="gears__rot2">
+                            <img src="img/indust-clock-rotating2.png">
+                        </div>
+                        <div class="gears__mid">
+                            <img src="img/indust-clock-middle.png">
+                        </div>
+                        <div class="gears__rot3">
+                            <img src="img/indust-clock-rotating3.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="industrialization-text-area">
+            <img src="img/industrialization-text.png">
+        </div>
     </div>
     <div class="section" id="placeholder-next-next-section" style="border:1px solid whitesmoke">
         <p>placeholder text</p>
 
-        <div id="line-holder">  
+        <div id="line-holder">
         </div>
     </div>
 </div>
