--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
     <div class="section" id="notes-section">
    
-            <div id="intro-text-area">
+            <div id="intro-text-area" class ="flex">
             <img style= "max-width: 1300px" src="img/text1.png">
-      
+            <img id="ghosts" src="img/ghosts.png">
         </div>
 
     </div>
