--- a/index.html
+++ b/index.html
@@ -54,25 +54,41 @@
         <div id="gears-area">
             <div id="gears__clock">
                 <img id="gears__bg" src="img/indust-clock-background.png">
+                <div class="gears__longing">
+                    <img src="img/gears/clock2.svg">
+                </div>
+
                 <div id="gears__individual">
                     <div class="gears___relative">
-                        <div class="gears__rot1">
-                            <img src="img/indust-clock-rotating1.png">
+                        <div class="gears__handles">
+                            <img src="img/gears/clock7.svg">
                         </div>
-                        <div class="gears__rot2">
+                        <div class="gears__rot1">
                             <img src="img/indust-clock-rotating2.png">
                         </div>
-                        <div class="gears__mid">
-                            <img src="img/indust-clock-middle.png">
+                        <div class="gears__rot2">
+                            <img src="img/gears/clock3.svg">
                         </div>
                         <div class="gears__rot3">
-                            <img src="img/indust-clock-rotating3.png">
+                            <img src="img/gears/clock4.svg">
                         </div>
+                        <div class="gears__rot4">
+                            <img src="img/gears/clock5.svg">
+                        </div>
+<!--                        <div class="gears__mid">-->
+<!--                            <img src="img/indust-clock-middle.png">-->
+<!--                        </div>-->
+
                     </div>
+                </div>
+                <div class="gears__bottom-center">
+                    <img src="img/gears/clock9.svg">
+                </div>
+                <div class="gears__bottom">
+                    <img src="img/gears/clock8.svg">
                 </div>
             </div>
         </div>
-    
     </div>
 
     
